--- a/index.html
+++ b/index.html
@@ -11,168 +11,189 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- header шапка -->
-    <header>
-      <nav class="list">
-        <a class="logo link" href="./index.html"
-          >Web<span class="logo-link">Studio</span></a
-        >
-        <ul class="menu-item list">
-          <li class="menu-item link">
-            <a class="menu-item link" href="./index.html">Studio</a>
-          </li>
-          <li class="menu-item link">
-            <a class="menu-item link link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li class="menu-item link">
-            <a class="menu-item link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="addres list">
-        <ul class="menu-contacts list">
-          <li class="contacts">
-            <a class="menu-contact link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="contacts">
-            <a class="menu-contact link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+    <header class="box-header">
+      <div class="container">
+        <nav class="list">
+          <a class="logo link" href="./index.html"
+            >Web<span class="logo-link">Studio</span></a
+          >
+          <ul class="nav-item list">
+            <li class="item link">
+              <a class="menu-item link" href="./index.html">Studio</a>
+            </li>
+            <li class="item link">
+              <a class="menu-item link link" href="./portfolio.html"
+                >Portfolio</a
+              >
+            </li>
+            <li class="item link">
+              <a class="menu-item link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="addres list">
+          <ul class="menu-contacts list">
+            <li class="contacts">
+              <a class="menu-contact link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contacts">
+              <a class="menu-contact link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <!-- секція 1 -->
-      <section class="section-one">
-        <h1 class="title">Effective Solutions for Your Business</h1>
-        <button class="btn" type="button">Order Service</button>
+      <section class="section section-one">
+        <div class="container">
+          <h1 class="title">Effective Solutions for Your Business</h1>
+          <button class="btn" type="button">Order Service</button>
+        </div>
       </section>
       <!-- секція 2 -->
-      <section>
-        <h2 class="visually-hidden">Advantages</h2>
-        <ul class="list">
-          <li>
-            <h3 class="title-three">Strategy</h3>
-            <p class="text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="title-three">Punctuality</h3>
-            <p class="text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="title-three">Diligence</h3>
-            <p class="text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="title-three">Technologies</h3>
-            <p class="text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <section class="section">
+        <div class="container">
+          <h2 class="visually-hidden">Advantages</h2>
+          <ul class="list">
+            <li>
+              <h3 class="title-three">Strategy</h3>
+              <p class="text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="title-three">Punctuality</h3>
+              <p class="text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="title-three">Diligence</h3>
+              <p class="text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="title-three">Technologies</h3>
+              <p class="text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- секція 3 -->
-      <section>
-        <h2 class="title-two">What are we doing</h2>
-        <ul class="list link">
-          <li>
-            <img
-              src="./images/cection2/monitor.jpg"
-              alt="monitor"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/cection2/telephone.jpg"
-              alt="telephone"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/cection2/monitor-telephone.jpg"
-              alt="monitor-telephone"
-              width="360"
-              height="300"
-            />
-          </li>
-        </ul>
+      <section class="section">
+        <div class="container">
+          <h2 class="title-two">What are we doing</h2>
+          <ul class="list-img list">
+            <li class="img-list">
+              <img
+                src="./images/cection2/monitor.jpg"
+                alt="monitor"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="img-list">
+              <img
+                src="./images/cection2/telephone.jpg"
+                alt="telephone"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="img-list">
+              <img
+                src="./images/cection2/monitor-telephone.jpg"
+                alt="monitor-telephone"
+                width="360"
+                height="300"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- секція 4 -->
-      <section class="section-four">
-        <h2 class="title-two">Our Team</h2>
-        <ul class="list">
-          <li class="section-four-list">
-            <img
-              src="./images/cection3/mark-guerrero.jpg"
-              alt="Product Designer"
-              width="264"
-              height="260"
-            />
-            <h3 class="title-three">Mark Guerrero</h3>
-            <p class="text">Product Designer</p>
-          </li>
-          <li class="section-four-list">
-            <img
-              src="./images/cection3/tom-ford.jpg"
-              alt="Frontend Developer"
-              width="264"
-              height="260"
-            />
-            <h3 class="title-three">Tom Ford</h3>
-            <p class="text">Frontend Developer</p>
-          </li>
-          <li class="section-four-list">
-            <img
-              src="./images/cection3/camila-garcia.jpg"
-              alt="Marketing"
-              width="264"
-              height="260"
-            />
-            <h3 class="title-three">Camila Garcia</h3>
-            <p class="text">Marketing</p>
-          </li>
-          <li class="section-four-list">
-            <img
-              src="./images/cection3/daniel-wilson.jpg"
-              alt="UI Designer"
-              width="264"
-              height="260"
-            />
-            <h3 class="title-three">Daniel Wilson</h3>
-            <p class="text">UI Designer</p>
-          </li>
-        </ul>
+      <section class="section section-four">
+        <div class="container">
+          <h2 class="title-two">Our Team</h2>
+          <ul class="list">
+            <li class="section-four-list">
+              <img
+                src="./images/cection3/mark-guerrero.jpg"
+                alt="Product Designer"
+                width="264"
+                height="260"
+              />
+              <h3 class="title-three">Mark Guerrero</h3>
+              <p class="text">Product Designer</p>
+            </li>
+            <li class="section-four-list">
+              <img
+                src="./images/cection3/tom-ford.jpg"
+                alt="Frontend Developer"
+                width="264"
+                height="260"
+              />
+              <h3 class="title-three">Tom Ford</h3>
+              <p class="text">Frontend Developer</p>
+            </li>
+            <li class="section-four-list">
+              <img
+                src="./images/cection3/camila-garcia.jpg"
+                alt="Marketing"
+                width="264"
+                height="260"
+              />
+              <h3 class="title-three">Camila Garcia</h3>
+              <p class="text">Marketing</p>
+            </li>
+            <li class="section-four-list">
+              <img
+                src="./images/cection3/daniel-wilson.jpg"
+                alt="UI Designer"
+                width="264"
+                height="260"
+              />
+              <h3 class="title-three">Daniel Wilson</h3>
+              <p class="text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- підвал -->
     <footer class="footer">
-      <a class="logo link" href="./index.html"
-        >Web<span class="logo-link-two">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="logo link" href="./index.html"
+          >Web<span class="logo-link-two">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
