--- a/portfolio.html
+++ b/portfolio.html
@@ -41,29 +41,29 @@
               <a class="menu-item link" href="">Contacts</a>
             </li>
           </ul>
+
+          <address class="addres list">
+            <ul class="menu-contacts list">
+              <li class="contacts">
+                <a class="menu-contact link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="contacts">
+                <a class="menu-contact link" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
         </nav>
-        <address class="addres list">
-          <ul class="menu-contacts list">
-            <li class="contacts">
-              <a class="menu-contact link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="contacts">
-              <a class="menu-contact link" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
-          </ul>
-        </address>
       </div>
     </header>
-
     <!-- main -->
     <main>
       <!-- section 1 button -->
       <section class="section">
-        <div class="container-pf">
+        <div class="container">
           <h1 class="visually-hidden">button</h1>
           <ul class="btn-pf list">
             <li class="button-pf list">
@@ -92,181 +92,145 @@
               </button>
             </li>
           </ul>
-        </div>
 
-        <!-- section 2 -->
+          <!--    section 1   -->
 
-        <div class="container">
           <ul class="list-portfolio list">
             <li class="card-set">
-              <article class="card">
-                <a class="link" href="">
-                  <div class="img-card">
-                    <img
-                      src="./images/section-portfolio2/bankingapp.jpg"
-                      alt="Banking App"
-                      width="360"
-                      height="300"
-                    />
-                  </div>
-                  <div class="card-content">
-                    <h2 class="title-two-pf list">
-                      Banking App Interface Concept
-                    </h2>
-                    <p class="text-card list">App</p>
-                  </div></a
-                >
-              </article>
+              <a class="link" href="">
+               
+                <img
+                  src="./images/section-portfolio2/bankingapp.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+                <div class="img-card">
+                  <h2 class="title-two-pf list">
+                    Banking App Interface Concept
+                  </h2>
+                  <p class="card-text list">App</p>
+                </div></a
+              >
             </li>
             <li class="card-set">
-              <article class="card">
-                <a class="link" href="">
-                  <div class="img-card">
-                    <img
-                      src="./images/section-portfolio2/marketingpayment.jpg"
-                      alt="Cashless Payment"
-                      width="360"
-                      height="300"
-                    />
-                  </div>
-                  <div class="card-content">
-                    <h2 class="title-two-pf list">Cashless Payment</h2>
-                    <p class="text-card list">Marketing</p>
-                  </div></a
-                >
-              </article>
+              <a class="link" href="">
+                <img
+                    src="./images/section-portfolio2/marketingpayment.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                    height="300"
+                  />
+                <div class="img-card">
+                  <h2 class="title-two-pf list">Cashless Payment</h2>
+                  <p class="card-text list">Marketing</p>
+                </div></a
+              >
             </li>
             <li class="card-set">
-              <article class="card">
-                <a class="link" href="">
-                  <div class="img-card">
-                    <img
-                      src="./images/section-portfolio2/appmeditation.jpg"
-                      alt="Meditation App"
-                      width="360"
-                      height="300"
-                    />
-                  </div>
-                  <div class="card-content">
-                    <h2 class="title-two-pf list">Meditation App</h2>
-                    <p class="text-card list">App</p>
-                  </div></a
-                >
-              </article>
+              <a class="link" href="">
+                
+                  <img
+                    src="./images/section-portfolio2/appmeditation.jpg"
+                    alt="Meditation App"
+                    width="360"
+                    height="300"
+                  />
+                <div class="img-card">
+                  <h2 class="title-two-pf list">Meditation App</h2>
+                  <p class="card-text list">App</p>
+                </div></a
+              >
             </li>
 
             <!-- section 3 -->
 
             <li class="card-set">
-              <article class="card">
-                <a class="link" href="">
-                  <div class="img-card">
-                    <img
-                      src="./images/section-portfolio3/marketingtaxi.jpg"
-                      alt="Taxi Service"
-                      width="360"
-                      height="300"
-                    />
-                  </div>
-                  <div class="card-content">
-                    <h2 class="title-two-pf list">Taxi Service</h2>
-                    <p class="text-card list">Marketing</p>
-                  </div></a
-                >
-              </article>
+              <a class="link" href="">
+                <img
+                    src="./images/section-portfolio3/marketingtaxi.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                    height="300"
+                  />
+                <div class="img-card">
+                  <h2 class="title-two-pf list">Taxi Service</h2>
+                  <p class="card-text list">Marketing</p>
+                </div></a
+              >
             </li>
             <li class="card-set">
-              <article class="card">
-                <a class="link" href="">
-                  <div class="img-card">
-                    <img
-                      src="./images/section-portfolio3/designscreen.jpg"
-                      alt="Screen Illustrations"
-                      width="360"
-                      height="300"
-                    />
-                  </div>
-                  <div class="card-content">
-                    <h2 class="title-two-pf list">Screen Illustrations</h2>
-                    <p class="text-card list">Design</p>
-                  </div></a
-                >
-              </article>
+              <a class="link" href="">
+                <div class="img-card">
+                  <img
+                    src="./images/section-portfolio3/designscreen.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                    height="300"
+                  />
+                  <h2 class="title-two-pf list">Screen Illustrations</h2>
+                  <p class="card-text list">Design</p>
+                </div></a
+              >
             </li>
             <li class="card-set">
-              <article class="card">
-                <a class="link" href="">
-                  <div class="img-card">
-                    <img
-                      src="./images/section-portfolio3/marketingcourses.jpg"
-                      alt="Online Courses"
-                      width="360"
-                      height="300"
-                    />
-                  </div>
-                  <div class="card-content">
-                    <h2 class="title-two-pf list">Online Courses</h2>
-                    <p class="text-card list">Marketing</p>
-                  </div></a
-                >
-              </article>
+              <a class="link" href="">
+                  <img
+                    src="./images/section-portfolio3/marketingcourses.jpg"
+                    alt="Online Courses"
+                    width="360"
+                    height="300"
+                  />
+                <div class="img-card">
+                  <h2 class="title-two-pf list">Online Courses</h2>
+                  <p class="card-text list">Marketing</p>
+                </div></a
+              >
             </li>
 
             <!-- section 4 -->
 
             <li class="card-set">
-              <article class="card">
-                <a class="link" href="">
-                  <div class="img-card">
-                    <img
-                      src="./images/section-portfolio4/designinstagram.jpg"
-                      alt="Instagram Stories Concept"
-                      width="360"
-                      height="300"
-                    />
-                  </div>
-                  <div class="card-content">
-                    <h2 class="title-two-pf list">Instagram Stories Concept</h2>
-                    <p class="text-card list">Design</p>
-                  </div></a
-                >
-              </article>
+              <a class="link" href="">
+                  <img
+                    src="./images/section-portfolio4/designinstagram.jpg"
+                    alt="Instagram Stories Concept"
+                    width="360"
+                    height="300"
+                  />
+                <div class="img-card">
+                  <h2 class="title-two-pf list">Instagram Stories Concept</h2>
+                  <p class="card-text list">Design</p>
+                </div></a
+              >
             </li>
             <li class="card-set">
-              <article class="card">
-                <a class="link" href="">
-                  <div class="img-card">
-                    <img
-                      src="./images/section-portfolio4/websitefood.jpg"
-                      alt="Organic Food"
-                      width="360"
-                      height="300"
-                    />
-                  </div>
-                  <div class="card-content">
-                    <h2 class="title-two-pf list">Organic Food</h2>
-                    <p class="text-card list">Web Site</p>
-                  </div></a
-                >
-              </article>
+              <a class="link" href="">
+                  <img
+                    src="./images/section-portfolio4/websitefood.jpg"
+                    alt="Organic Food"
+                    width="360"
+                    height="300"
+                  />
+                <div class="img-card">
+                  <h2 class="title-two-pf list">Organic Food</h2>
+                  <p class="card-text list">Web Site</p>
+                </div></a
+              >
             </li>
             <li class="card-set">
-              <article class="card">
-                <a class="link" href="">
-                  <div class="img-card">
-                    <img
-                      src="./images/section-portfolio4/websitecoffee.jpg"
-                      alt="Fresh Coffee"
-                      width="360"
-                      height="300"
-                    />
-                  </div>
-                  <div class="card-content">
-                    <h2 class="title-two-pf list">Fresh Coffee</h2>
-                    <p class="text-card list">Web Site</p>
-                  </div></a
-                >
-              </article>
+              <a class="link" href="">
+                  <img
+                    src="./images/section-portfolio4/websitecoffee.jpg"
+                    alt="Fresh Coffee"
+                    width="360"
+                    height="300"
+                  />
+                <div class="img-card">
+                  <h2 class="title-two-pf list">Fresh Coffee</h2>
+                  <p class="card-text list">Web Site</p>
+                </div></a
+              >
             </li>
           </ul>
         </div>
@@ -274,7 +238,7 @@
       <!-- підвал -->
     </main>
     <footer class="section footer">
-      <div class="container cont-footer">
+      <div class="container">
         <a class="logo logo-footer link" href="./index.html"
           >Web<span class="logo-link-two">Studio</span></a
         >
