--- a/index.html
+++ b/index.html
@@ -41,35 +41,34 @@
               <a class="menu-item link" href="">Contacts</a>
             </li>
           </ul>
+
+          <address class="addres list">
+            <ul class="menu-contacts list">
+              <li class="contacts">
+                <a class="menu-contact link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="contacts">
+                <a class="menu-contact link" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
         </nav>
-        <address class="addres list">
-          <ul class="menu-contacts list">
-            <li class="contacts">
-              <a class="menu-contact link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="contacts">
-              <a class="menu-contact link" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
-          </ul>
-        </address>
       </div>
     </header>
     <main>
       <!-- секція 1 -->
-      <section class="section section-one">
+      <section class="section-one">
         <div class="container cont-hero-t">
           <h1 class="title">Effective Solutions for Your Business</h1>
-        </div>
-        <div class="container cont-hero">
           <button class="btn" type="button">Order Service</button>
         </div>
       </section>
       <!-- секція 2 -->
-      <section class="section">
+      <section class="section section-two">
         <div class="container cont-two">
           <h2 class="visually-hidden">Advantages</h2>
           <ul class="list-two list">
@@ -106,7 +105,7 @@
       </section>
       <!-- секція 3 -->
       <section class="section">
-        <div class="container cont-three">
+        <div class="container">
           <h2 class="title-two">What are we doing</h2>
           <ul class="list-img list">
             <li class="img-list">
@@ -137,7 +136,7 @@
         </div>
       </section>
       <!-- секція 4 -->
-      <section class="section section-four">
+      <section class="section-four">
         <div class="container cont-four">
           <h2 class="title-two">Our Team</h2>
           <ul class="list-img-four list">
@@ -150,7 +149,7 @@
               />
               <div class="card-cont">
                 <h3 class="title-card">Mark Guerrero</h3>
-              <p class="text-card">Product Designer</p>
+                <p class="text-card">Product Designer</p>
               </div>
             </li>
             <li class="section-four-list">
@@ -160,10 +159,10 @@
                 width="264"
                 height="260"
               />
-             <div class="card-cont">
-               <h3 class="title-card">Tom Ford</h3>
-              <p class="text-card">Frontend Developer</p>
-             </div>
+              <div class="card-cont">
+                <h3 class="title-card">Tom Ford</h3>
+                <p class="text-card">Frontend Developer</p>
+              </div>
             </li>
             <li class="section-four-list">
               <img
@@ -174,7 +173,7 @@
               />
               <div class="card-cont">
                 <h3 class="title-card">Camila Garcia</h3>
-              <p class="text-card">Marketing</p>
+                <p class="text-card">Marketing</p>
               </div>
             </li>
             <li class="section-four-list">
@@ -186,7 +185,7 @@
               />
               <div class="card-cont">
                 <h3 class="title-card">Daniel Wilson</h3>
-              <p class="text-card">UI Designer</p>
+                <p class="text-card">UI Designer</p>
               </div>
             </li>
           </ul>
@@ -195,7 +194,7 @@
     </main>
     <!-- підвал -->
     <footer class="section footer">
-      <div class="container cont-footer">
+      <div class="container">
         <a class="logo logo-footer link" href="./index.html"
           >Web<span class="logo-link-two">Studio</span></a
         >
