--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
     <main>
       <!-- секція 1 -->
       <section class="section-one">
-        <div class="container cont-hero-t">
+        <div class="container">
           <h1 class="title">Effective Solutions for Your Business</h1>
           <button class="btn" type="button">Order Service</button>
         </div>
       </section>
       <!-- секція 2 -->
-      <section class="section section-two">
+      <section class="section-two">
         <div class="container cont-two">
           <h2 class="visually-hidden">Advantages</h2>
           <ul class="list-two list">
@@ -104,8 +104,8 @@
         </div>
       </section>
       <!-- секція 3 -->
-      <section class="section">
-        <div class="container">
+      <section class="section-three">
+        <div class="container container-three">
           <h2 class="title-two">What are we doing</h2>
           <ul class="list-img list">
             <li class="img-list">
@@ -193,7 +193,7 @@
       </section>
     </main>
     <!-- підвал -->
-    <footer class="section footer">
+    <footer class="footer">
       <div class="container">
         <a class="logo logo-footer link" href="./index.html"
           >Web<span class="logo-link-two">Studio</span></a
