--- a/portfolio.html
+++ b/portfolio.html
@@ -161,13 +161,13 @@
             </li>
             <li class="card-set">
               <a class="link" href="">
-                <div class="img-card">
                   <img
                     src="./images/section-portfolio3/designscreen.jpg"
                     alt="Screen Illustrations"
                     width="360"
                     height="300"
                   />
+                <div class="img-card">
                   <h2 class="title-two-pf list">Screen Illustrations</h2>
                   <p class="card-text list">Design</p>
                 </div></a
@@ -237,7 +237,7 @@
       </section>
       <!-- підвал -->
     </main>
-    <footer class="section footer">
+     <footer class="footer">
       <div class="container">
         <a class="logo logo-footer link" href="./index.html"
           >Web<span class="logo-link-two">Studio</span></a
