--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   </head>
   <body>
     <!-- header шапка -->
-    <header class="section-header">
-      <div class="container">
+ <header class="section-header">
+      <div class="container-header container">
         <nav class="nav-header list">
           <a class="logo link" href="./index.html"
             >Web<span class="logo-link">Studio</span></a
