--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
   <body>
     <!-- шапка header -->
     <header class="section-header">
-      <div class="container">
+      <div class="container-header container">
         <nav class="nav-header list">
           <a class="logo link" href="./index.html"
             >Web<span class="logo-link">Studio</span></a
