--- a/portfolio.html
+++ b/portfolio.html
@@ -44,12 +44,12 @@
           <address class="addres list">
             <ul class="menu-contacts list">
               <li class="contacts">
-                <a class="menu-contact link" href="mailto:info@devstudio.com"
+                <a class="menu-cont link" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
                 >
               </li>
               <li class="contacts">
-                <a class="menu-contact link" href="tel:+110001111111"
+                <a class="menu-cont link" href="tel:+110001111111"
                   >+11 (000) 111-11-11</a
                 >
               </li>
