--- a/portfolio.html
+++ b/portfolio.html
@@ -43,12 +43,12 @@
           </ul>
           <address class="addres list">
             <ul class="menu-contacts list">
-              <li>
+              <li class="cont">
                 <a href="mailto:info@devstudio.com" class="menu-cont link"
                   >info@devstudio.com</a
                 >
               </li>
-              <li>
+              <li class="cont">
                 <a href="tel:+110001111111"  class="menu-cont link" 
                   >+11 (000) 111-11-11</a
                 >
