--- a/portfolio.html
+++ b/portfolio.html
@@ -32,30 +32,30 @@
             <li class="item link">
               <a class="menu-item link" href="./index.html">Studio</a>
             </li>
-            <li class="item link">
+            <li class="link">
               <a class="menu-item link link" href="./portfolio.html"
                 >Portfolio</a
               >
             </li>
-            <li class="item link">
+            <li class="link">
               <a class="menu-item link" href="">Contacts</a>
             </li>
           </ul>
-          <address class="addres list">
-            <ul class="menu-contacts list">
-              <li class="cont">
-                <a href="mailto:info@devstudio.com" class="menu-cont link"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li class="cont">
-                <a href="tel:+110001111111"  class="menu-cont link" 
-                  >+11 (000) 111-11-11</a
-                >
-              </li>
-            </ul>
-          </address>
         </nav>
+        <address class="addres list">
+          <ul class="menu-contacts list">
+            <li class="cont">
+              <a href="mailto:info@devstudio.com" class="menu-cont link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="cont">
+              <a href="tel:+110001111111" class="menu-cont link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
       </div>
     </header>
     <!-- main -->
@@ -97,7 +97,6 @@
           <ul class="list-portfolio list">
             <li class="card-set">
               <a class="link" href="">
-               
                 <img
                   src="./images/section-portfolio2/bankingapp.jpg"
                   alt="Banking App"
@@ -115,11 +114,11 @@
             <li class="card-set">
               <a class="link" href="">
                 <img
-                    src="./images/section-portfolio2/marketingpayment.jpg"
-                    alt="Cashless Payment"
-                    width="360"
-                    height="300"
-                  />
+                  src="./images/section-portfolio2/marketingpayment.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
                 <div class="img-card">
                   <h2 class="title-two-pf list">Cashless Payment</h2>
                   <p class="card-text list">Marketing</p>
@@ -128,13 +127,12 @@
             </li>
             <li class="card-set">
               <a class="link" href="">
-                
-                  <img
-                    src="./images/section-portfolio2/appmeditation.jpg"
-                    alt="Meditation App"
-                    width="360"
-                    height="300"
-                  />
+                <img
+                  src="./images/section-portfolio2/appmeditation.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
                 <div class="img-card">
                   <h2 class="title-two-pf list">Meditation App</h2>
                   <p class="card-text list">App</p>
@@ -147,11 +145,11 @@
             <li class="card-set">
               <a class="link" href="">
                 <img
-                    src="./images/section-portfolio3/marketingtaxi.jpg"
-                    alt="Taxi Service"
-                    width="360"
-                    height="300"
-                  />
+                  src="./images/section-portfolio3/marketingtaxi.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
                 <div class="img-card">
                   <h2 class="title-two-pf list">Taxi Service</h2>
                   <p class="card-text list">Marketing</p>
@@ -160,12 +158,12 @@
             </li>
             <li class="card-set">
               <a class="link" href="">
-                  <img
-                    src="./images/section-portfolio3/designscreen.jpg"
-                    alt="Screen Illustrations"
-                    width="360"
-                    height="300"
-                  />
+                <img
+                  src="./images/section-portfolio3/designscreen.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
                 <div class="img-card">
                   <h2 class="title-two-pf list">Screen Illustrations</h2>
                   <p class="card-text list">Design</p>
@@ -174,12 +172,12 @@
             </li>
             <li class="card-set">
               <a class="link" href="">
-                  <img
-                    src="./images/section-portfolio3/marketingcourses.jpg"
-                    alt="Online Courses"
-                    width="360"
-                    height="300"
-                  />
+                <img
+                  src="./images/section-portfolio3/marketingcourses.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
                 <div class="img-card">
                   <h2 class="title-two-pf list">Online Courses</h2>
                   <p class="card-text list">Marketing</p>
@@ -191,12 +189,12 @@
 
             <li class="card-set">
               <a class="link" href="">
-                  <img
-                    src="./images/section-portfolio4/designinstagram.jpg"
-                    alt="Instagram Stories Concept"
-                    width="360"
-                    height="300"
-                  />
+                <img
+                  src="./images/section-portfolio4/designinstagram.jpg"
+                  alt="Instagram Stories Concept"
+                  width="360"
+                  height="300"
+                />
                 <div class="img-card">
                   <h2 class="title-two-pf list">Instagram Stories Concept</h2>
                   <p class="card-text list">Design</p>
@@ -205,12 +203,12 @@
             </li>
             <li class="card-set">
               <a class="link" href="">
-                  <img
-                    src="./images/section-portfolio4/websitefood.jpg"
-                    alt="Organic Food"
-                    width="360"
-                    height="300"
-                  />
+                <img
+                  src="./images/section-portfolio4/websitefood.jpg"
+                  alt="Organic Food"
+                  width="360"
+                  height="300"
+                />
                 <div class="img-card">
                   <h2 class="title-two-pf list">Organic Food</h2>
                   <p class="card-text list">Web Site</p>
@@ -219,12 +217,12 @@
             </li>
             <li class="card-set">
               <a class="link" href="">
-                  <img
-                    src="./images/section-portfolio4/websitecoffee.jpg"
-                    alt="Fresh Coffee"
-                    width="360"
-                    height="300"
-                  />
+                <img
+                  src="./images/section-portfolio4/websitecoffee.jpg"
+                  alt="Fresh Coffee"
+                  width="360"
+                  height="300"
+                />
                 <div class="img-card">
                   <h2 class="title-two-pf list">Fresh Coffee</h2>
                   <p class="card-text list">Web Site</p>
@@ -236,7 +234,7 @@
       </section>
       <!-- підвал -->
     </main>
-     <footer class="footer">
+    <footer class="footer">
       <div class="container">
         <a class="logo logo-footer link" href="./index.html"
           >Web<span class="logo-link-two">Studio</span></a
