--- a/portfolio.html
+++ b/portfolio.html
@@ -32,12 +32,12 @@
             <li class="item link">
               <a class="menu-item link" href="./index.html">Studio</a>
             </li>
-            <li class="link">
+            <li class="item link">
               <a class="menu-item link link" href="./portfolio.html"
                 >Portfolio</a
               >
             </li>
-            <li class="link">
+            <li class="item link">
               <a class="menu-item link" href="">Contacts</a>
             </li>
           </ul>
