--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
     <main>
       <!-- секція 1 -->
       <section class="section-one">
-        <div class="container">
+        <div class="container cont-one">
           <h1 class="title">Effective Solutions for Your Business</h1>
           <button class="btn" type="button">Order Service</button>
         </div>
       </section>
       <!-- секція 2 -->
       <section class="section-two">
-        <div class="container cont-two">
+        <div class="container">
           <h2 class="visually-hidden">Advantages</h2>
           <ul class="list-two list">
             <li class="list-next">
